--- a/views/cartpage/section.ejs
+++ b/views/cartpage/section.ejs
@@ -25,7 +25,10 @@ for(let i=0;i<=cart.length -1 ; i++)
             <img src="../../images/emptyCart.png" alt="Your cart is empty" class="img-fluid">
         </div>
         <div class="col-12 text-center mt-3">
-            <a href="/" class="btn btn-warning text-light">Shop Now</a>
+            <a href="/" class="btn btn-warning text-light">
+                <i class="fas fa-shopping-bag"></i>
+                Shop Now
+            </a>
         </div>
     </div>
     <%} else{%>
