--- a/views/itempage/section.ejs
+++ b/views/itempage/section.ejs
@@ -53,8 +53,9 @@ let type2 = typeof itemDoc.recommended[2].pr_price;
             <button class="mt-1 text-white w-50 btn btn-warning" onclick="addToCart(this)" id="<%=itemId%>">
                 Add to Cart
                 <i class="fas fa-shopping-cart"></i>
-            </button>
-            <button class="mt-1 text-white w-50 btn btn-warning" onclick="warning()" id="addedBtn" style="display:none;">
+            </button>            
+            <button class="mt-1 text-white w-50 btn btn-warning" onclick="warning()" id="addedBtn"
+                style="display:none;">
                 Added to Cart
                 <i class="fas fa-check-circle"></i>
             </button>
