Cart functionality improved

--- a/views/checkoutpage/sections.ejs
+++ b/views/checkoutpage/sections.ejs
@@ -129,7 +129,7 @@
                         </p>
                     </div>
                 </div>
-                <a class="btn btn-lg bg-warning text-white mt-1 ml-2 w-50 text-center" href="/orderPlaced">Place order</a>
+                <a class="btn btn-lg bg-warning text-white mt-1 ml-2 w-50 text-center" href="/orderPlaced" onclick="postPlaceOrderFunctions()">Place order</a>
             </form>
         </div>
     </div>
