--- a/views/homepage/header.ejs
+++ b/views/homepage/header.ejs
@@ -39,9 +39,9 @@
         <%if(logStatus == 'true'){%>
         <div class="accounts mr-3">
             <!--  <img src="../../images/accountImg.png" width="48px">  -->
-            <p class="d-inline text-danger">Hi, <%=userName%></p>
+            <a class="d-inline">Hi, <%=userName%> </a>
             <a href="/cart">
-                | <img src="../../images/itemsInYourCart.png" width="40px">
+                 <img src="../../images/itemsInYourCart.png" width="40px">
             </a>
             <a href="/logout" class="btn text-white" style="background-color: orange">
                 <i class="fas fa-sign-out-alt"></i> Logout
