--- a/public/css/login.css
+++ b/public/css/login.css
@@ -42,3 +42,7 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+.signAlert{
+  font-family: 'Noto Sans HK', sans-serif;
+  font-size: 12px;
+}
