--- a/views/userAccounts/loginPage.ejs
+++ b/views/userAccounts/loginPage.ejs
@@ -9,12 +9,16 @@
   <link rel="icon" href="../../images/favicon.ico">
 
   <title>Tomspizza Login </title>
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+HK&display=swap" rel="stylesheet">
   <!-- CSS -->
   <link rel="stylesheet" href="/css/login.css">
+  <script src="../../js/script.js"></script>
 </head>
 
 <body class="text-center">
@@ -22,8 +26,33 @@
     <img class="mb-4" src="../../images/tomspizza_login_logo.jpg" alt="" width="200px" height="">
     <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
     <input name="email" type="email" id="inputEmail" class="my-2 form-control" placeholder="Email address" required
-      autofocus>
-    <input name="password" type="password" id="inputPassword" class="my-2 form-control" placeholder="Password" required>
+      autofocus onclick="hideEmailAlert();">
+    
+      <%if(errorEmail){%>
+    <script>
+      let inputEmail = document.getElementById('inputEmail');
+      inputEmail.style.border = '1px solid red';
+    </script>
+    <strong class="float-left text-danger signAlert" id="wrongEmailAlert">
+      <i class="fas fa-exclamation-triangle text-danger"></i> <%=errorEmail%>
+    </strong>
+    <br>
+    <%}%>
+    
+    <input name="password" type="password" id="inputPassword" class="my-2 form-control" placeholder="Password" required
+      onclick="hidePassAlert();">
+    
+      <%if(errorPassword){%>
+    <script>
+      let inputPassword = document.getElementById('inputPassword');
+      inputPassword.style.border = '1px solid red';
+    </script>
+    <strong class="float-left text-danger signAlert" id="wrongPassAlert">
+      <i class="fas fa-exclamation-triangle text-danger"></i> <%=errorPassword%>
+    </strong>
+    <br>
+    <%}%>
+    
     <div class="float-left checkbox mb-3">
       <label>
         <input type="checkbox" value="remember-me"> Remember me
