--- a/views/userAccounts/signupPage.ejs
+++ b/views/userAccounts/signupPage.ejs
@@ -32,7 +32,7 @@
 </head>
 
 <body class="text-center">
-  <form class="form-signin" action="/signup" method="POST" novalidate>
+  <form class="form-signin" action="/signup" method="POST">
     <img class="mb-4" src="../../images/tomspizza_login_logo.jpg" alt="" width="200px">
     <h1 class="h3 mb-3 font-weight-normal">Create Account</h1>
     <input name="fname" type="text" class="my-2 form-control" placeholder="First Name" required autofocus>
